Revert "Moving test to JAVA REST API"